# claude-tui

./: Cargo.toml  README.md
first_prompts/: README.md
first_prompts/prompts/: 00_SPEC.md  01_skeleton.md  02_input_field.md  03_messages.md  04_api_client.md  05_wire_up.md  06_streaming.md  07_tabs.md  08_polish.md
src/: api.rs  app.rs  conversation.rs  main.rs  storage.rs  ui.rs
